# lolo-ai-documents

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/agents/: __init__.py
app/agents/orchestration/: __init__.py  analyzer_agent.py  generator_agent.py  refiner_agent.py
app/agents/quality/: __init__.py  data_validator.py  legal_validator.py  senior_reviewer.py  structure_validator.py
app/agents/specialists/: __init__.py  appeals.py  civil_litigation.py  constitutional.py  execution.py  guarantees.py  labor.py  obligations.py  procedural.py
app/api/routes/: __init__.py  analyze.py  annexes.py  document_types.py  finalize.py  generate.py  health.py  learning.py  refine.py
app/models/: __init__.py  requests.py  responses.py  schemas.py
app/prompts/: __init__.py  analyzer.py  refiner.py  specialists.py  validators.py
app/services/: __init__.py  annex_service.py  context_cache_service.py  document_context_service.py  docx_service.py  extrajudicial_context_service.py  file_extraction_service.py  learning_service.py  mysql_service.py  redis_service.py  s3_service.py  token_reporter.py
app/templates/: __init__.py  base.py  demanda_eg.py  demanda_ods.py  escrito_procesal.py
app/utils/: __init__.py  context_formatter.py  exceptions.py  learning_override.py  llm_utils.py  llm_worker.py  pdf_extractor.py  streaming.py
app/workflows/: __init__.py  document_workflow.py
scripts/: docker-build-test.ps1
tests/: __init__.py  conftest.py  test_health.py
