[project]
name = "lolo-ai-documents"
version = "1.0.0"
description = "AI Document Generation Microservice for LOLO Legal Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LOLO Team"}
]

dependencies = [
    # FastAPI & Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # AI & LangChain
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.26",
    "anthropic>=0.39.0",

    # Database (MySQL only - sessions in JUDICIAL_AI_DOCUMENT_SESSION)
    "aiomysql>=0.2.0",

    # AWS
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",

    # Document Generation & Processing
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",

    # Image Processing
    "Pillow>=10.0.0",
    "pillow-heif>=0.15.0",

    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "httpx>=0.26.0",

    # Logging & Monitoring
    "loguru>=0.7.0",

    # Rate Limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
